--- a/minihack/agent/polybeast/skill_transfer/option_config.yaml
+++ b/minihack/agent/polybeast/skill_transfer/option_config.yaml
@@ -11,11 +11,10 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-#
 defaults:
-- override hydra/job_logging: colorlog
-- override hydra/hydra_logging: colorlog
-- override hydra/launcher: submitit_slurm
+#- hydra/job_logging: colorlog
+#- hydra/hydra_logging: colorlog
+- hydra/launcher: submitit_slurm
 
 # pip install hydra-core hydra_colorlog
 # can set these on the commandline too, e.g. `hydra.launcher.partition=dev`
@@ -36,9 +35,9 @@ name: null  # can use this to have multiple runs with same params, eg name=1,2,3
 
 ## WandB settings
 wandb: false  # enable wandb logging
-project: mtp  # specifies the project name to log to
-entity: minihack  # the team to log to
-group: default  # defines a group name for the experiment
+project: minihack  # specifies the project name to log to
+entity: michaelmatthews  # the team to log to
+group: scrap  # defines a group name for the experiment
 
 # Skill transfer settings
 state_dict_path: none
@@ -69,12 +68,20 @@ save_tty: False
 
 # Run settings.
 mode: train
-env: smalL_room
+env: score
 obs_keys: "glyphs,chars,colors,specials,blstats,message"
+## env (task) names
+# staircase
+# pet
+# eat
+# gold
+# score
+# scout
+# oracle
 
 # Training settings.
 num_actors: 256           # should be at least batch_size
-total_steps: 1e5
+total_steps: 1e9          # 1e9 used in paper
 batch_size: 32            # 32 is standard, can use 128 with small model variants
 unroll_length: 80         # 80 is standard
 num_learner_threads: 1
@@ -82,11 +89,10 @@ num_inference_threads: 1
 disable_cuda: false
 learner_device: cuda:0
 actor_device: cuda:0
-max_learner_queue_size: null
 
 # Model settings.
 model: baseline    # random, baseline, rnd, ride
-use_lstm: true
+use_lstm: false
 hidden_dim: 256    # use at least 128, 256 is stronger
 embedding_dim: 64  # use at least 32, 64 is stronger
 glyph_type: all_cat   # full, group_id, color_char, all, all_cat* (all_cat best, full fastest)
@@ -96,6 +102,7 @@ layers: 5          # number of cnn layers for crop/glyph model
 crop_model: cnn
 crop_dim: 9        # size of crop
 use_index_select: true    # use index select instead of normal embedding lookup
+max_learner_queue_size: 1024
 
 
 # Loss settings.
