--- a/minihack/agent/polybeast/config.yaml
+++ b/minihack/agent/polybeast/config.yaml
@@ -35,9 +35,9 @@ hydra:
 name: null  # can use this to have multiple runs with same params, eg name=1,2,3,4,5
 
 ## WandB settings
-wandb: false  # enable wandb logging
-project: mtp  # specifies the project name to log to
-entity: minihack  # the team to log to
+wandb: true  # enable wandb logging
+project: minihack_results  # specifies the project name to log to
+entity: michaelmatthews  # the team to log to
 group: default  # defines a group name for the experiment
 
 # Skill transfer settings
